Revisão de páginas

--- a/ux.html
+++ b/ux.html
@@ -46,7 +46,7 @@
                             <div class="col-xl-6 col-lg-7">
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
-                                        <ul id="navigation">
+                                        <ul id="navigation" class="nav justify-content-end">
                                             <li><a href="index.html">Home</a></li>
                                             <li><a href="perfil.html">Perfil</a></li>
                                             <li><a href="#">Portfolio <i class="ti-angle-down"></i></a>
@@ -61,9 +61,9 @@
                                 </div>
                             </div>
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
-                                <div class="Appointment">
+                                <div class="Appointment" class="nav justify-content-end">
                                     <div class="book_btn d-none d-lg-block">
-                                        <a href="contato.html">Vamos conversar</a>
+                                        <a href="https://whats.link/priscyllaboente">Vamos conversar</a>
                                     </div>
                                 </div>
                             </div>
@@ -77,7 +77,7 @@
             </div>
         </div>
     </header>
-    <!-- header-end -->         
+    <!-- header-end -->          
     
     <!-- bradcam_area  -->
          <div class="bradcam_area bradcam_bg_1">
@@ -85,7 +85,11 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="bradcam_text text-center">
-                                <h3>Portfólio - UX</h3>
+                                <h3>UX</h3>
+                                <ul class="breadcrumb">
+                                    <li><a href="index.html">Home</a></li>
+                                    <li>UX</li>
+                                  </ul>
                             </div>
                         </div>
                     </div>
