--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Favicon  -->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
-   
+    
     <!-- CSS here -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -46,25 +46,24 @@
                             <div class="col-xl-6 col-lg-7">
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
-                                        <ul id="navigation">
+                                        <ul id="navigation" class="nav justify-content-end">
                                             <li><a href="index.html">Home</a></li>
                                             <li><a href="perfil.html">Perfil</a></li>
-                                             <li><a href="#">Portfolio <i class="ti-angle-down"></i></a>
+                                            <li><a href="#">Portfolio <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
                                                     <li><a href="ux.html">UX</a></li>
                                                     <li><a href="ui.html">UI</a></li>
                                                     <li><a href="designvisual.html">Visual</a></li>
                                                 </ul>
                                             </li>
-                                           
                                         </ul>
                                     </nav>
                                 </div>
                             </div>
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
-                                <div class="Appointment">
+                                <div class="Appointment" class="nav justify-content-end">
                                     <div class="book_btn d-none d-lg-block">
-                                        <a href="contato.html">Vamos conversar</a>
+                                        <a href="https://whats.link/priscyllaboente">Vamos conversar</a>
                                     </div>
                                 </div>
                             </div>
@@ -78,7 +77,7 @@
             </div>
         </div>
     </header>
-    <!-- header-end -->
+    <!-- header-end -->  
 
   <!-- slider_area_start -->
   <div class="slider_area">
@@ -88,8 +87,8 @@
                 <div class="col-lg-12">
                     <div class="slider_text text-center about_slide">
                         <h3>Olá, eu sou Priscylla Boente <br>
-                                UI/UX Design.</h3>
-                    <a class="boxed-btn3-line" href="portfolio.html class="img-pop-up>Conheça meu Portfólio</a>
+                                UI/UX Design</h3>
+                    <a class="boxed-btn3-line" href="perfil.html">Conheça mais sobre mim</a>
                     </div>
                 </div>
             </div>
@@ -103,14 +102,14 @@
             <div class="row">
                 <div class="col-xl-10">
                     <div class="download_text">
-                        <h3>Sou uma carioca criativa, que adora design limpo, simples e único. Eu também gosto de fazer ilustrações.</h3>
+                        <h3>Sou fascinada pelo futuro da tecnologia e em coisas que podem fazer bem para mundo.</h3>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-md-6">
                     <div class="download_left">
-                        <p>Designer há mais de 13 anos. Profissional especializada em criações conceituais de experiências visuais corporativas. 
+                        <p>Designer há mais de 14 anos. Profissional especializada em criações conceituais de experiências visuais corporativas. 
                         </p>
                         <p>Atualmente atendo como freelancer em todo o território nacional entregando um trabalho de excelência utilizando metodologias e fundamentos que tangem para a obtenção de um posicionamento visual sólido.</p>
                         <a href="#" class="boxed-btn3-line">Download CV</a>
@@ -157,6 +156,7 @@
                 <div class="col-xl-12">
                     <div class="section_title mb-50">
                         <h3>Portfólio</h3>
+                        <h5>Veja por categoria</h5>
                     </div>
                 </div>
             </div>
@@ -201,13 +201,6 @@
                                     <span>UI/UX</span>
                                     <a href="ux.html"><h4>Projetos de UX/UI</h4></a>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="more_works">
-                                    <a class="boxed-btn3-line" href="Portfolio.">Veja mais...</a>
                             </div>
                         </div>
                     </div>
