--- a/ui.html
+++ b/ui.html
@@ -8,10 +8,9 @@
     <meta name="Portfolio, UX, Design, Designer, Digital, Visual" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- <link rel="manifest" href="site.webmanifest"> -->
+    <!-- Favicon  -->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
-    <!-- Place favicon.ico in the root directory -->
-
+    
     <!-- CSS here -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -47,9 +46,9 @@
                             <div class="col-xl-6 col-lg-7">
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
-                                        <ul id="navigation">
+                                        <ul id="navigation" class="nav justify-content-end">
                                             <li><a href="index.html">Home</a></li>
-                                            <li><a href="about.html">Perfil</a></li>
+                                            <li><a href="perfil.html">Perfil</a></li>
                                             <li><a href="#">Portfolio <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
                                                     <li><a href="ux.html">UX</a></li>
@@ -62,9 +61,9 @@
                                 </div>
                             </div>
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
-                                <div class="Appointment">
+                                <div class="Appointment" class="nav justify-content-end">
                                     <div class="book_btn d-none d-lg-block">
-                                        <a href="contato.html">Vamos conversar</a>
+                                        <a href="https://whats.link/priscyllaboente">Vamos conversar</a>
                                     </div>
                                 </div>
                             </div>
@@ -78,7 +77,7 @@
             </div>
         </div>
     </header>
-    <!-- header-end -->         
+    <!-- header-end -->  
     
     <!-- bradcam_area  -->
          <div class="bradcam_area bradcam_bg_1">
@@ -86,7 +85,11 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="bradcam_text text-center">
-                                <h3>Portfólio - UI</h3>
+                                <h3>UI</h3>
+                                <ul class="breadcrumb">
+                                    <li><a href="index.html">Home</a></li>
+                                    <li>UI</li>
+                                  </ul>
                             </div>
                         </div>
                     </div>
@@ -171,7 +174,6 @@
         </div>
     </div>
     <!-- gallery_area end  -->
-   <!-- footer start -->
    <!-- footer start -->
    <footer class="footer">
     <div class="footer_top">
