Conserto de palavras

--- a/perfil.html
+++ b/perfil.html
@@ -63,7 +63,7 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment" class="nav justify-content-end">
                                     <div class="book_btn d-none d-lg-block">
-                                        <a href="https://whats.link/priscyllaboente">Vamos conversar</a>
+                                        <a href="https://bit.ly/35T9ZPy">Vamos conversar</a>
                                     </div>
                                 </div>
                             </div>
@@ -114,18 +114,19 @@
                                     <br>
                                     <br>
                                 </div>
-                                <p> Olá pessoal, Sou a Priscylla!
+                                <p> Olá pessoal, sou a Priscylla!
                                     Sou uma Carioca criativa, que adora design limpo, simples e único. Eu também gosto de fazer ilustrações.</p>
                                 <p>
-                                    Designer há mais de 14 anos profissionalmente desde quando sai da graduação de Comunicação Social com Habilitação em Publicidade. Mas desde 15 anos já fazia cartões, logos, panfletos para pessoas conhecidas. Com o passar dos anos, foram surgindo novas tecnologia e a minha paixão aumentou cada vez mais.  
+                                    Faço designer há mais de 14 anos profissionalmente desde quando sai da graduação de Comunicação Social com Habilitação em Publicidade. Mas desde dos meus 15 anos já fazia cartões, logos, panfletos para pessoas conhecidas. Com o passar dos anos, foram surgindo novas tecnologias e a minha paixão aumentou cada vez mais.  
                                 </p>
 
                                 <p>
-                                    Nos últimos anos dediquei meus estudos em UX Design e acredito que um bom projeto é o resultado de um conjunto de técnicas e processos que envolvem cliente e usuários na busca por uma solução viável para situações e necessidades do cotidiano. Gerar valor de negócio para o cliente e proporcionar uma boa experiência para o usuário é sempre o melhor caminho para que os objetivos sejam sempre atingidos ao final de qualquer projeto.</p>
+                                    Nos últimos anos dediquei meus estudos em UX Design e acredito que um bom projeto é o resultado de um conjunto de técnicas e processos que envolvem cliente e usuários na busca por uma solução viável para situações e necessidades do cotidiano. Gerar valor de negócio para o cliente e proporcionar uma boa experiência para o usuário é sempre o melhor caminho para que os objetivos sejam sempre atingidos ao final de qualquer projeto.
+                                </p>
                                 
                                     <div class="single-defination">
                                 <p>
-                                    Sempre estou em busca de conhecimento, e não importa onde e como, acredito que a curiosidade seja a base de toda informação. Gosto de rock, animações de diversos estilos, artes, video games, tecnologia e desenvolvimento sustentável.
+                                    Sempre estou em busca de conhecimento, e não importa onde e como, acredito que a curiosidade seja a base de toda informação. Gosto de rock, animações de diversos estilos, artes, video games, tecnologia, IOT e desenvolvimento sustentável.
                                 <p>
                                 </div>
                                 <br>
@@ -148,7 +149,7 @@
                     <h3>
                             UI/UX Designer
                     </h3>
-                    <p>Indentifico, pesquiso, faço tanto wireframes e protótipos quando design visual.Uma experiência completa no processo.</p>
+                    <p>Indentifico, pesquiso, faço tanto wireframes e protótipos de baixo e alto nível. Uma experiência completa no processo.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -159,7 +160,7 @@
                     <h3>
                             Web Development
                     </h3>
-                    <p>Desenvolvimento front-end para interfaces responsivas e já desenvolvi isites e aplicações utilizando html/css/js e também em PHP (Wordpress).</p>
+                    <p>Desenvolvimento front-end para interfaces responsivas e já desenvolvi sites e aplicações utilizando html/css/js e também em PHP (Wordpress).</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
