--- a/ui.html
+++ b/ui.html
@@ -63,7 +63,7 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment" class="nav justify-content-end">
                                     <div class="book_btn d-none d-lg-block">
-                                        <a href="https://whats.link/priscyllaboente">Vamos conversar</a>
+                                        <a href="https://bit.ly/35T9ZPy">Vamos conversar</a>
                                     </div>
                                 </div>
                             </div>
@@ -142,7 +142,7 @@
                                 </div>
                                 <div class="gallery_heading">
                                     <span>Design Mobile</span>
-                                    <a href="banco-linker.html"><h4>APP Club de negócios</h4></a>
+                                    <a href="banco-linker.html"><h4>Aplicativo GetClub de negócios</h4></a>
                                 </div>
                             </div>
                         </div>
@@ -152,8 +152,8 @@
                                     <img src="img/gallery/16.png" alt="">
                                 </div>
                                 <div class="gallery_heading">
-                                    <span>Dashboard</span>
-                                    <a href="works_details.html"><h4>Tela de Login</h4></a>
+                                    <span>Design Mobile</span>
+                                    <a href="works_details.html"><h4>Aplicativo de reservas - Pocket Trip</h4></a>
                                 </div>
                             </div>
                        </div>
