Ajuste em perfil

--- a/perfil.html
+++ b/perfil.html
@@ -117,7 +117,7 @@
                                 <p> Olá pessoal, sou a Priscylla!
                                     Sou uma Carioca criativa, que adora design limpo, simples e único. Eu também gosto de fazer ilustrações.</p>
                                 <p>
-                                    Faço designer há mais de 14 anos profissionalmente desde quando sai da graduação de Comunicação Social com Habilitação em Publicidade. Mas desde dos meus 15 anos já fazia cartões, logos, panfletos para pessoas conhecidas. Com o passar dos anos, foram surgindo novas tecnologias e a minha paixão aumentou cada vez mais.  
+                                    Faço designer há mais de 14 anos profissionalmente desde quando sai da graduação de Comunicação Social com Habilitação em Publicidade. Desde os meus 15 anos já trabalhava desenvolvendo cartões, logos, panfletos para pessoas conhecidas. Com o passar dos anos, foram surgindo novas tecnologias e a minha paixão aumentou cada vez mais.  
                                 </p>
 
                                 <p>
