--- a/ui.html
+++ b/ui.html
@@ -104,67 +104,67 @@
                     <div class="row">
                         <div class="col-xl-6 col-lg-6 col-md-6">
                             <div class="single_gallery">
-                                <div class="thumb">
+                                <div class="thumb"><a href="img/gallery/13.png" class="img-pop-up">
                                     <img src="img/gallery/13.png" alt="">
                                 </div>
                                 <div class="gallery_heading">
                                     <span>Design Mobile</span>
-                                    <a href="works_details.html"><h4>Music Player - neomorphism</h4></a>
+                                    <h4>Music Player - neomorphism</h4></a>
                                 </div>
                             </div>
                        </div>
                         <div class="col-xl-6 col-lg-6 col-md-6">
                             <div class="single_gallery">
-                                <div class="thumb">
+                                <div class="thumb"><a href="img/gallery/12.png" class="img-pop-up">
                                     <img src="img/gallery/12.png" alt="">
                                 </div>
                                 <div class="gallery_heading">
                                     <span>Design item</span>
-                                    <a href="banco-linker.html"><h4>Item - Ecommerce</h4></a>
+                                    <h4>Item - Ecommerce</h4></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6">
                             <div class="single_gallery">
-                                <div class="thumb">
+                                <div class="thumb"><a href="img/gallery/11.png" class="img-pop-up">
                                     <img src="img/gallery/11.png" alt="">
                                 </div>
                                 <div class="gallery_heading">
                                     <span>Design Mobile</span>
-                                    <a href="works_details.html"><h4>Delivery Japonês</h4></a>
+                                    <h4>Delivery Japonês</h4></a>
                                 </div>
                             </div>
                        </div>
                         <div class="col-xl-6 col-lg-6 col-md-6">
                             <div class="single_gallery">
-                                <div class="thumb">
+                                <div class="thumb"><a href="img/gallery/4.png" class="img-pop-up">
                                     <img src="img/gallery/4.png" alt="">
                                 </div>
                                 <div class="gallery_heading">
                                     <span>Design Mobile</span>
-                                    <a href="banco-linker.html"><h4>Aplicativo GetClub de negócios</h4></a>
+                                    <h4>Aplicativo GetClub de negócios</h4></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6">
                             <div class="single_gallery">
-                                <div class="thumb">
+                                <div class="thumb"><a href="img/gallery/16.png" class="img-pop-up">
                                     <img src="img/gallery/16.png" alt="">
                                 </div>
                                 <div class="gallery_heading">
                                     <span>Design Mobile</span>
-                                    <a href="works_details.html"><h4>Aplicativo de reservas - Pocket Trip</h4></a>
+                                    <h4>Aplicativo de reservas - Pocket Trip</h4></a>
                                 </div>
                             </div>
                        </div>
                         <div class="col-xl-6 col-lg-6 col-md-6">
                             <div class="single_gallery">
-                                <div class="thumb">
+                                <div class="thumb"><a href="img/gallery/15.png" class="img-pop-up">
                                     <img src="img/gallery/15.png" alt="">
                                 </div>
                                 <div class="gallery_heading">
                                     <span>Ícones</span>
-                                    <a href="banco-linker.html"><h4>Pacote de ícones de música</h4></a>
+                                    <h4>Pacote de ícones de música</h4></a>
                                 </div>
                             </div>
                         </div>
