--- a/petdote.html
+++ b/petdote.html
@@ -63,7 +63,7 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment" class="nav justify-content-end">
                                     <div class="book_btn d-none d-lg-block">
-                                        <a href="https://bit.ly/35T9ZPy">Vamos conversar</a>
+                                        <a href="https://bit.ly/35T9ZPy" target="_blank">Vamos conversar</a>
                                     </div>
                                 </div>
                             </div>
